python/testData/quickFixes/PyAddImportQuickFixTest/addParenthesesAndTrailingCommaToUpdatedFromImport/main.py
from module import foo
print(foo, <error descr="Unresolved reference 'bar'">b<caret>ar</error>)